--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    
+    <script src="js/home.js" defer></script>
      <script src="js/cart.js" defer></script>
     <script src="js/products.js" defer></script>
    
