added the favicon

--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,7 @@
     <script type="module" src="js/cart.js"></script>
     <script type="module" src="js/checkout.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/RainyDays_Logo.png">
     <title>Rainydays Checkoutpage</title>
 </head>
 <body>
