--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="module" src="js/alerts.js"></script>
     <script type="module" src="js/checkout.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/RainyDays_Logo.png">
     <title>RainyDays mainpage</title>
 </head>
 <body>
