--- a/productpage.html
+++ b/productpage.html
@@ -9,6 +9,7 @@
     <script src="js/alerts.js" type="module"></script>
     <script src="js/checkout.js" type="module"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/RainyDays_Logo.png">
     <title>RainyDays - Product Page</title>
 </head>
 <body>
